Fix icon spacing

--- a/src/pydata_sphinx_theme/assets/styles/components/_icon-links.scss
+++ b/src/pydata_sphinx_theme/assets/styles/components/_icon-links.scss
@@ -10,7 +10,7 @@
     &.fas {
       vertical-align: middle;
       font-style: normal;
-      font-size: 1.5rem;
+      font-size: var(--pst-font-size-icon);
       line-height: 1.25;
     }
 
@@ -37,6 +37,11 @@
     padding-left: 0;
   }
 
+  a span {
+    display: flex;
+    align-items: center;
+  }
+
   // inline the element in the navbar as long as they fit and use display block when collapsing
   // One breakpoint less than $breakpoint-sidebar-primary.
   // See variables/_layout.scss for more info.
@@ -45,8 +50,7 @@
 
     // Use Bootstrap padding for these nav links to get the spacing right
     a {
-      padding-left: 0.5rem;
-      padding-right: 0.5rem;
+      padding: 0rem 0.5rem;
     }
   }
 }
