--- a/src/pydata_sphinx_theme/assets/styles/components/_search.scss
+++ b/src/pydata_sphinx_theme/assets/styles/components/_search.scss
@@ -109,7 +109,7 @@
   // Font and input text a bit bigger
   i,
   input {
-    font-size: 1.5rem;
+    font-size: var(--pst-font-size-icon);
   }
 }
 
