--- a/src/pydata_sphinx_theme/assets/styles/sections/_sidebar-secondary.scss
+++ b/src/pydata_sphinx_theme/assets/styles/sections/_sidebar-secondary.scss
@@ -10,6 +10,11 @@
   top: var(--pst-header-height);
   max-height: calc(100vh - var(--pst-header-height));
 
+  font-size: var(--pst-sidebar-secondary-font-size);
+  @include media-breakpoint-down(lg) {
+    font-size: var(--pst-sidebar-font-size-mobile);
+  }
+
   padding: 2rem 1rem 1rem 1rem;
   @include make-col(2);
 
