--- a/src/pydata_sphinx_theme/assets/styles/sections/_sidebar-toggle.scss
+++ b/src/pydata_sphinx_theme/assets/styles/sections/_sidebar-toggle.scss
@@ -106,18 +106,6 @@ input {
   }
 }
 
-// Secondary sidebar hides/shows on wider widths
-@include media-breakpoint-up($breakpoint-sidebar-secondary) {
-  label.sidebar-toggle.secondary-toggle {
-    display: none;
-  }
-
-  .bd-sidebar-secondary {
-    margin-right: 0;
-    visibility: visible;
-  }
-}
-
 .bd-sidebar-secondary {
   // One breakpoint less than $breakpoint-sidebar-secondary. See variables/_layout.scss for more info.
   @include media-breakpoint-down(lg) {
