--- a/src/pydata_sphinx_theme/assets/styles/variables/_icons.scss
+++ b/src/pydata_sphinx_theme/assets/styles/variables/_icons.scss
@@ -3,7 +3,10 @@
   * Icon
   */
 
-  // font awesome icons
+  // Font size across all icons
+  --pst-font-size-icon: 1.5rem;
+
+  // Font Awesome default icons
   --pst-icon-check-circle: "\f058"; // fas fa-check-circle
   --pst-icon-info-circle: "\f05a"; // fas fa-info-circle
   --pst-icon-exclamation-triangle: "\f071"; // fas fa-exclamation-triangle
